# mini-jvm

./: .clang-format  .gitignore  CMakeLists.txt  LICENSE  README.md  lib_core.cmake  lib_trace.cmake  lib_vm.cmake  main.cpp  trace_render.txt
inc/core/: Class.h  trace.h  vmdefs.h
inc/core/error/: VMError.h
inc/core/specs/: class_flags.h  flags.h
inc/core/trace/: macros.h  options.h  printer.h
inc/trace/: color.h  macros.h  options.h  printer.h
inc/vm/: Machine.h
inc/vm/loader/: ClassLoader.h
inc/vm/parse/: ByteParser.h  ClassFile.h  ClassFormatParser.h  CodePtr.h
sample_java/: Hello.java
src/core/: Class.cpp
src/core/error/: VMError.cpp
src/core/specs/: class_flags.c
src/core/trace/: options.cpp  printer.cpp
src/trace/: options.cpp
src/vm/: Machine.cpp
src/vm/loader/: ClassLoader.cpp
src/vm/parse/: ByteParser.cpp  ClassFile.cpp  ClassFormatParser.cpp  CodePtr.cpp
